SONAR-5718 Fix clipping effect

--- a/server/sonar-web/src/main/less/issues.less
+++ b/server/sonar-web/src/main/less/issues.less
@@ -309,10 +309,7 @@
 
 .issues-workspace-component-viewer {
   padding: 1px 10px;
-
-  &.full-height {
-    min-height: 100vh;
-  }
+  min-height: 100vh;
 
   .code-issue-modern {
     margin: 5px 0;
